--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <!-- HEADER -->
   <header>
     <!-- Use your existing file name; ideal is a PNG/SVG with transparent background -->
-    <img src="logo.png" alt="CrystalCore Business Solutions Logo" class="logo-img">
+    <img src="logo.svg" alt="CrystalCore Business Solutions Logo" class="logo-img">
     <h1>CrystalCore Business Solutions (CCBS)</h1>
     <p>Your strategic partner in clarity, precision, and innovation</p>
   </header>
