--- a/index.html
+++ b/index.html
@@ -7,151 +7,155 @@
   <meta name="description" content="CrystalCore Business Solutions (CCBS) — Business Analyst & Consultant Service. Clarity, precision, and innovation for growth, efficiency, and digital excellence.">
 
   <style>
-    :root{
-      --ccbs-purple:#6A0DAD;
-      --ccbs-purple-dark:#5a0aa1;
-      --bg:#f6f7fb;
-      --text:#222;
-      --muted:#5b5b5b;
-      --card:#ffffff;
-      --shadow:0 8px 24px rgba(16,24,40,.06);
+    :root {
+      --purple: #2A1B47;
+      --yellow: #FFD700;
+      --white: #FFFFFF;
+      --gray-bg: #F6F7FB;
+      --shadow: 0 8px 24px rgba(16,24,40,.06);
     }
 
-    /* Base */
     body {
-      margin:0;
+      margin: 0;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height:1.6;
+      background: var(--gray-bg);
+      color: var(--purple);
+      line-height: 1.6;
     }
     a { color: inherit; }
 
     /* Header */
-    header{
-      background: linear-gradient(180deg, var(--ccbs-purple) 0%, var(--ccbs-purple-dark) 100%);
-      color:#fff;
-      text-align:center;
-      padding: 30px 20px 36px;
-    }
-    /* ✅ Clean logo: no white box, no padding */
-    .logo-img{
-      height: clamp(84px, 9vw, 128px);
-      width:auto;
-      display:inline-block;
-      margin-bottom:12px;
-      /* subtle separation from header without a white card */
-      filter: drop-shadow(0 6px 14px rgba(0,0,0,.18));
-      border-radius: 0;        /* ensure no rounding from old styles */
-      background: transparent; /* ensure no white background */
-      padding: 0;              /* remove extra white area on mobile */
-    }
-    header h1{ margin:0; font-size: clamp(24px, 3.2vw, 36px); font-weight:800; }
-    header p{ margin-top:8px; font-size: clamp(14px, 1.4vw, 18px); }
-
-    /* Nav */
-    nav{
-      background: var(--ccbs-purple-dark);
-      padding: 10px;
+    header {
+      background: var(--white);
+      color: var(--purple);
       text-align: center;
+      padding: 28px 20px 36px;
+      border-bottom: 2px solid #f0f0f0;
     }
-    nav a{
-      color: #fff;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
+    .logo-img {
+      height: clamp(84px, 10vw, 120px);
+      width: auto;
+      margin-bottom: 10px;
     }
-    nav a:hover{ text-decoration: underline; }
+    header h1 {
+      margin: 0;
+      font-size: 2.2em;
+      font-weight: 800;
+      color: var(--purple);
+    }
+    header p {
+      margin-top: 8px;
+      font-size: 1.1em;
+      color: var(--purple);
+    }
 
-    /* Container & Sections */
-    .container{
+    /* Navigation */
+    nav {
+      background: var(--white);
+      text-align: center;
+      padding: 12px 0;
+      border-bottom: 1px solid #eee;
+    }
+    nav a {
+      color: var(--purple);
+      margin: 0 15px;
+      font-weight: bold;
+      text-decoration: none;
+    }
+    nav a:hover {
+      color: #FFD700; /* hover yellow accent */
+    }
+
+    /* Sections */
+    .container {
       max-width: 1100px;
       margin: auto;
       padding: 20px;
     }
-    section{ padding: 36px 0 8px; }
-    h2{ color: var(--ccbs-purple); margin-bottom:12px; }
-    .lead{ color: var(--muted); }
+    section { padding: 36px 0 8px; }
+    h2 { color: var(--purple); margin-bottom: 12px; }
+    .lead { color: #555; }
 
-    /* Grid & Cards */
-    .grid{
-      display:grid;
-      grid-template-columns: repeat(auto-fit,minmax(260px,1fr));
+    /* Grid */
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 20px;
     }
-    .card{
-      background: var(--card);
+    .card {
+      background: var(--white);
       padding: 20px;
       border-radius: 14px;
       box-shadow: var(--shadow);
     }
-    .card h3{ margin-top:0; font-size:18px; }
+    .card h3 { margin-top: 0; font-size: 18px; }
 
-    /* Service bullets */
-    .card ul{ list-style:none; padding:0; margin:10px 0 0; }
-    .card li{ display:flex; align-items:flex-start; gap:8px; margin:6px 0; }
-    .card li::before{
-      content:"•";
-      font-weight:900;
-      color: var(--ccbs-purple);
-      line-height:1;
+    /* Bullets */
+    .card ul { list-style: none; padding: 0; margin: 10px 0 0; }
+    .card li {
+      display: flex; align-items: flex-start; gap: 8px; margin: 6px 0;
+    }
+    .card li::before {
+      content: "•";
+      font-weight: 900;
+      color: var(--purple);
       transform: translateY(2px);
     }
 
     /* Why Section */
-    .why ul { list-style:none; padding:0; }
-    .why li::before { content:"✅ "; }
+    .why ul { list-style: none; padding: 0; }
+    .why li::before { content: "✅ "; }
 
     /* Form */
-    form{
-      display:grid;
+    form {
+      display: grid;
       gap: 12px;
       max-width: 520px;
       margin: 18px auto 0;
       padding: 20px;
-      background: var(--card);
+      background: var(--white);
       border-radius: 14px;
       box-shadow: var(--shadow);
     }
-    input, textarea{
+    input, textarea {
       padding: 10px;
       border-radius: 8px;
       border: 1px solid #ccc;
       font-size: 1rem;
     }
-    textarea{ min-height: 120px; resize: vertical; }
-    button{
+    textarea { min-height: 120px; resize: vertical; }
+    button {
       padding: 12px;
       border: none;
-      background: var(--ccbs-purple);
-      color: #fff;
-      font-weight:700;
+      background: var(--purple);
+      color: var(--white);
+      font-weight: 700;
       border-radius: 999px;
-      cursor:pointer;
+      cursor: pointer;
     }
-    button:hover{ filter: brightness(1.05); }
+    button:hover { background: #FFD700; color: var(--purple); }
 
     /* Footer */
-    footer{
+    footer {
       text-align: center;
-      background: var(--ccbs-purple-dark);
-      color:#fff;
-      padding:20px;
-      margin-top:30px;
+      background: var(--purple);
+      color: var(--white);
+      padding: 20px;
+      margin-top: 30px;
     }
+    footer a { color: #FFD700; text-decoration: none; }
   </style>
 </head>
 <body>
 
   <!-- HEADER -->
   <header>
-    <!-- Use your existing file name; ideal is a PNG/SVG with transparent background -->
     <img src="logo.svg" alt="CrystalCore Business Solutions Logo" class="logo-img">
     <h1>CrystalCore Business Solutions (CCBS)</h1>
     <p>Your strategic partner in clarity, precision, and innovation</p>
   </header>
 
-  <!-- NAVIGATION -->
+  <!-- NAV -->
   <nav>
     <a href="#about">About</a>
     <a href="#services">Services</a>
@@ -247,12 +251,13 @@
   <section id="contact" class="container">
     <h2>Contact Us</h2>
     <p>📞 24/7 Support via call & chat</p>
-    <p>Email: <a href="mailto:info@crystalcore.com">info@crystalcore.com</a></p>
+    <p>Email: <a href="mailto:saravana.akconsult@gmail.com">saravana.akconsult@gmail.com</a></p>
     <p>Phone: <a href="tel:+919840407627">+91 98404 07627</a></p>
 
     <form id="contactForm">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
+      <input type="tel" name="phone" placeholder="Your Phone Number" required />
       <textarea name="message" placeholder="Your Message" required></textarea>
       <button type="submit">Send Message</button>
     </form>
@@ -272,6 +277,7 @@
       const data = {
         name: form.name.value,
         email: form.email.value,
+        phone: form.phone.value,
         message: form.message.value
       };
       
